--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,7 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
+      - name: Install packages
+        uses: yarn install
       - name: Build the app
         run: cd android && ./gradlew assembleDebug
