--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,7 @@ jobs:
         run: yarn install
       - name: Build the app
         run: cd android && ./gradlew assembleDebug
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: android/app/build/outputs/apk/debug/app-debug.apk
