--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
         
       - run: | 
-          echo ${{ secrets.RELEASE_KEYSTORE }} > release.keystore.asc
+          echo "${{ secrets.RELEASE_KEYSTORE }}" > release.keystore.asc
           gpg -d --passphrase "${{ secrets.PASSPHRASE }}" --batch release.keystore.asc > fastlane/release.keystore
           
       - name: Install packages
