--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         
       - run: | 
           echo "${{ secrets.RELEASE_KEYSTORE }}" > release.keystore.asc
-          gpg -d --passphrase "${{ secrets.PASSPHRASE }}" --batch release.keystore.asc > fastlane/release.keystore
+          gpg -d --passphrase "${{ secrets.PASSPHRASE }}" --batch release.keystore.asc > android/fastlane/release.keystore
           
       - name: Install packages
         run: yarn install
