--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,13 @@ jobs:
           echo "${{ secrets.RELEASE_KEYSTORE }}" > release.keystore.asc
           gpg -d --passphrase "${{ secrets.PASSPHRASE }}" --batch release.keystore.asc > android/fastlane/release.keystore
           
-      - name: Install packages
-        run: yarn install
-        
-      - run: cd android && ./gradlew assembleDebug
+      - run: yarn install
+      - run: gem install fastlane
+      - run: | 
+          cd android
+          fastlane android release RELEASE_KEYSTORE_PASSWORD:${{secrets.RELEASE_KEYSTORE_PASSWORD}} RELEASE_KEYSTORE_KEY_PASSWORD:${{secrets.RELEASE_KEYSTORE_KEY_PASSWORD}} RELEASE_KEYSTORE_ALIAS:${{secrets.RELEASE_KEYSTORE_ALIAS}}
         
       - uses: actions/upload-artifact@v2
         with:
-          name: my-artifact
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+          name: releaseDevBuild
+          path: android/app/build/outputs/apk/release/app-release.apk
