--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,10 @@ jobs:
           
       - run: yarn install
       
-      - run: cd android
-      
       - uses: maierj/fastlane-action@v2.0.1
         with:
           lane: 'release'
+          subdirectory: 'android'
           options: '{ "RELEASE_KEYSTORE_PASSWORD": ":${{secrets.RELEASE_KEYSTORE_PASSWORD}}", "RELEASE_KEYSTORE_KEY_PASSWORD" : "${{secrets.RELEASE_KEYSTORE_KEY_PASSWORD}}", "RELEASE_KEYSTORE_ALIAS" : "${{secrets.RELEASE_KEYSTORE_ALIAS}}" }'
         
       - uses: actions/upload-artifact@v2
