--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       
       - uses: maierj/fastlane-action@v2.0.1
         with:
-          lane: 'release'
+          lane: 'android release'
           subdirectory: 'android'
           options: '{ "RELEASE_KEYSTORE_PASSWORD": ":${{secrets.RELEASE_KEYSTORE_PASSWORD}}", "RELEASE_KEYSTORE_KEY_PASSWORD" : "${{secrets.RELEASE_KEYSTORE_KEY_PASSWORD}}", "RELEASE_KEYSTORE_ALIAS" : "${{secrets.RELEASE_KEYSTORE_ALIAS}}" }'
         
