--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           lane: 'android release'
           subdirectory: 'android'
-          options: '{ "RELEASE_KEYSTORE_PASSWORD": ":${{secrets.RELEASE_KEYSTORE_PASSWORD}}", "RELEASE_KEYSTORE_KEY_PASSWORD" : "${{secrets.RELEASE_KEYSTORE_KEY_PASSWORD}}", "RELEASE_KEYSTORE_ALIAS" : "${{secrets.RELEASE_KEYSTORE_ALIAS}}" }'
+          options: '{ "RELEASE_KEYSTORE_PASSWORD": "${{secrets.RELEASE_KEYSTORE_PASSWORD}}", "RELEASE_KEYSTORE_KEY_PASSWORD": "${{secrets.RELEASE_KEYSTORE_KEY_PASSWORD}}", "RELEASE_KEYSTORE_ALIAS": "${{secrets.RELEASE_KEYSTORE_ALIAS}}" }'
         
       - uses: actions/upload-artifact@v2
         with:
