--- a/.github/workflows/iOSAdHoc.yml
+++ b/.github/workflows/iOSAdHoc.yml
@@ -33,8 +33,8 @@ jobs:
       - name: iOS Build Action
         uses: yukiarrr/ios-build-action@v1.4.0
         with:
-          project-path: Test64.xcodeproj
-          workspace-path: Test64.xcworkspace # optional
+          project-path: ./ios/Test64.xcodeproj
+          workspace-path: ./ios/Test64.xcworkspace # optional
           p12-base64: ${{ secrets.P12_BASE64 }}
           certificate-password: ${{ secrets.IOS_P12_PASSWORD }}
           mobileprovision-base64: ${{ secrets.AD_HOC_PROVISION_BASE64 }}
