--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-validic-aggregator-fit": "git+https://be7a0900eeeb7dd9e5a9f2e2e4dbbabaf141783b@github.com/healthimation/validic-google-fit.git#v0.0.1",
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
