--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-validic-aggregator-fit": "git@github.com:healthimation/validic-google-fit.git#v0.0.1"
+    "react-native-validic-aggregator-fit": "git+ssh://git@github.com:healthimation/validic-google-fit.git#v0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
