--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,11 @@ jobs:
       - run: | 
           echo "${{ secrets.RELEASE_KEYSTORE }}" > release.keystore.asc
           gpg -d --passphrase "${{ secrets.PASSPHRASE }}" --batch release.keystore.asc > android/fastlane/release.keystore
-          
+      
+      - uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY_GITHUB }} 
+      
       - run: yarn install
       
       - uses: maierj/fastlane-action@v2.0.1
